
---------------------------------------------------------------------
03a.26
  Remove Iterable interface on some Iterator (can't be sure to be able
  to reuse Iterator)
  Add package cx.ath.choisnet.util.iterator.iterable for
  Iterable-Iterator
  Add: cx.ath.choisnet.util.iterator.iterable.ArrayIterator
  Add: cx.ath.choisnet.util.iterator.iterable.BiIterator

---------------------------------------------------------------------
03a.25
  Add class cx.ath.choisnet.util.CancelRequestException
  Fix cancel handle in cx.ath.choisnet.util.duplicate.DuplicateFileCollector
  Add: method isCancel() to cx.ath.choisnet.util.duplicate.DigestEventListener
  Implement cancel from DigestEventListener in
    - cx.ath.choisnet.util.checksum.MessageDigestFile
    - cx.ath.choisnet.util.duplicate.DefaultDigestFileCollector
    - cx.ath.choisnet.util.duplicate.DuplicateFileCollector

---------------------------------------------------------------------
03a.24
  Move cx.ath.choisnet.net.PseudoPing to deprecated sources.

---------------------------------------------------------------------
03a.23
  Add: method toString(Charset) to cx.ath.choisnet.lang.ByteArrayBuilder

---------------------------------------------------------------------
03a.07
  Code review (improve documentation)
  Add: Annotation - alpha.cx.ath.choisnet.ToDo
  Add: Classes
    alpha.cx.ath.choisnet.io.AlternateDataStream
    alpha.cx.ath.choisnet.io.AlternateDataStreamTest
    alpha.cx.ath.choisnet.io.MSAlternateDataStreamDescription
    alpha.cx.ath.choisnet.io.MSAlternateDataStreamDescriptionEntry

  Since this code is base on reverse ingenering of my lost sources
  library did some change.

  Deprecated Classes (Not use ?)
    cx.ath.choisnet.sql.SimpleQueryException

  Classe moved to "alpha" package : (To be improve, or test, before release)
    alpha.cx.ath.choisnet.net.dhcp.DHCPMessage
    alpha.cx.ath.choisnet.net.dhcp.DHCPOptionEntry
    alpha.cx.ath.choisnet.net.dhcp.DHCPOptions