@@ -1,15 +1,0 @@
-package cx.ath.choisnet.util;
-
-import java.util.Iterator;
-
-/**
- *
- * @author Claude CHOISNET
- * @param <T> 
- *
- */
-@Deprecated
-public interface IterableIterator<T>
-    extends Iterable<T>, Iterator<T>
-{
-}
