@@ -2,17 +2,18 @@
  * Provide some extra Iterator, most based
  * on other Iterator. These Iterator are also Iterable.
  * <br/>
- * An Iterable-Iterator is an Iterator that could be 
+ * An {@link IterableIterator} is an Iterator that could be 
  * restart/reset using {@link Iterable#iterator()}
  * method.
  * <br/>
- * These Iterator is design to avoid copy of
+ * Theses Iterators are design to avoid copy of
  * Collections in memory and to generate result
  * in the flow.
  *
  * @author Claude CHOISNET
  * @see cx.ath.choisnet.util.enumeration
  * @see cx.ath.choisnet.util.iterator
+ * @see IterableIterator
  */
 package cx.ath.choisnet.util.iterator.iterable;
 
